--- a/Plunder_Party/Plunder_Party.uproject
+++ b/Plunder_Party/Plunder_Party.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.6",
+	"EngineAssociation": "{58E3ED45-4833-25CF-EF97-AB9AEE3B3BE2}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
