--- a/Plunder_Party/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Plunder_Party/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -436,7 +436,7 @@ Character=CameraComponent.TransformCommon.Transform,CameraComponent.PostProcess.
 K2Node_InputKey=CameraComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Local Exposure,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Color Grading|Temperature,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global IlluminationAdvanced,CameraComponent.PostProcess.Path Tracing,CameraComponent.PostProcess.Path Tracing|Lighting Components,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup
 ProgressBar=CameraComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Local Exposure,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Color Grading|Temperature,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global IlluminationAdvanced,CameraComponent.PostProcess.Path Tracing,CameraComponent.PostProcess.Path Tracing|Lighting Components,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.PlayerColour,K2Node_VariableSet.DefaultValueCategory.FillColorAndOpacity
 K2Node_VariableSet=CameraComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Local Exposure,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Color Grading|Temperature,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global IlluminationAdvanced,CameraComponent.PostProcess.Path Tracing,CameraComponent.PostProcess.Path Tracing|Lighting Components,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.PlayerColour
-BP_GmDrunkenPirate_C=CameraComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Local Exposure,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Color Grading|Temperature,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global IlluminationAdvanced,CameraComponent.PostProcess.Path Tracing,CameraComponent.PostProcess.Path Tracing|Lighting Components
+BP_GmDrunkenPirate_C=CameraComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Local Exposure,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Color Grading|Temperature,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global IlluminationAdvanced,CameraComponent.PostProcess.Path Tracing,CameraComponent.PostProcess.Path Tracing|Lighting Components,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.PlayerColour,K2Node_VariableSet.DefaultValueCategory.FillColorAndOpacity
 BP_ThirdPerson_C=CameraComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Local Exposure,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Color Grading|Temperature,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global IlluminationAdvanced,CameraComponent.PostProcess.Path Tracing,CameraComponent.PostProcess.Path Tracing|Lighting Components,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup
 WB_Player_Bars_C=CameraComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Local Exposure,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Color Grading|Temperature,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global IlluminationAdvanced,CameraComponent.PostProcess.Path Tracing,CameraComponent.PostProcess.Path Tracing|Lighting Components,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.PlayerColour,K2Node_VariableSet.DefaultValueCategory.FillColorAndOpacity
 PropertyWrapper=CameraComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Local Exposure,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Color Grading|Temperature,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global IlluminationAdvanced,CameraComponent.PostProcess.Path Tracing,CameraComponent.PostProcess.Path Tracing|Lighting Components,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.PlayerColour,K2Node_VariableSet.DefaultValueCategory.FillColorAndOpacity
@@ -444,6 +444,7 @@ K2Node=CameraComponent.TransformCommon.Transform,CameraComponent.PostProcess.Len
 TextLayoutWidget=CameraComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Local Exposure,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Color Grading|Temperature,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global IlluminationAdvanced,CameraComponent.PostProcess.Path Tracing,CameraComponent.PostProcess.Path Tracing|Lighting Components,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup
 PlayerController=CameraComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Local Exposure,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Color Grading|Temperature,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global IlluminationAdvanced,CameraComponent.PostProcess.Path Tracing,CameraComponent.PostProcess.Path Tracing|Lighting Components,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup
 WB_Pause_C=CameraComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Local Exposure,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Color Grading|Temperature,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global IlluminationAdvanced,CameraComponent.PostProcess.Path Tracing,CameraComponent.PostProcess.Path Tracing|Lighting Components,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.PlayerColour
+EdGraph=CameraComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Local Exposure,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Color Grading|Temperature,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global IlluminationAdvanced,CameraComponent.PostProcess.Path Tracing,CameraComponent.PostProcess.Path Tracing|Lighting Components,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.PlayerColour,K2Node_VariableSet.DefaultValueCategory.FillColorAndOpacity
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Input/Actions
@@ -459,7 +460,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize2=1
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Materials
+ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -570,21 +571,21 @@ GlobalAssetPicker.ColumnViewColumnsManuallyChangedOnce=False
 GlobalAssetPicker.ListHiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/ThirdPerson/Start_Screen
+LastLevel=/Game/ThirdPerson/Levels/Lvl_ThirdPerson
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -596,6 +597,8 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPerson.BP_ThirdPerson
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/ccom.ccom
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -612,16 +615,16 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/ThirdPerson/Levels/Lvl_ThirdPerson.Lvl_ThirdPerson", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Blueprints/Widgets/WB_Pause
-MRUItem1=/Game/ThirdPerson/Blueprints/Widgets/WB_Player_Bars
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_GmDrunkenPirate
-MRUItem3=/Game/ThirdPerson/Materials/MI_Player_4
-MRUItem4=/Game/ThirdPerson/Materials/MI_Player_3
-MRUItem5=/Game/ThirdPerson/Materials/MI_Player_2
-MRUItem6=/Game/ThirdPerson/Materials/MI_Player_1
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPerson
-MRUItem8=/Game/ThirdPerson/Blueprints/ccom
-MRUItem9=/Game/ThirdPerson/Levels/Lvl_ThirdPerson
+MRUItem0=/Game/ThirdPerson/Blueprints/ccom
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_GmDrunkenPirate
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPerson
+MRUItem3=/Game/ThirdPerson/Levels/Lvl_ThirdPerson
+MRUItem4=/Game/ThirdPerson/Blueprints/Widgets/WB_Pause
+MRUItem5=/Game/ThirdPerson/Blueprints/Widgets/WB_Player_Bars
+MRUItem6=/Game/ThirdPerson/Materials/MI_Player_4
+MRUItem7=/Game/ThirdPerson/Materials/MI_Player_3
+MRUItem8=/Game/ThirdPerson/Materials/MI_Player_2
+MRUItem9=/Game/ThirdPerson/Materials/MI_Player_1
 MRUItem10=/Game/ThirdPerson/Levels/Start_Screen
 MRUItem11=/Game/ThirdPerson/Blueprints/Widgets/WB_minigames
 MRUItem12=/Game/ThirdPerson/Blueprints/Widgets/WB_PauseMenu
@@ -1903,6 +1906,23 @@ PanelWidget.Rendering=True
 PanelWidget.Navigation=True
 PanelWidget.Localization=True
 K2Node_MakeStruct.PinOptions=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+EdGraph.Graph=True
+ccom_C.Tick=True
+ccom_C.Classes=True
+ccom_C.GameMode=True
+ccom_C.Game=True
+ccom_C.Physics=True
+ccom_C.Events=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2083,7 +2103,7 @@ ContentWidget="\"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|
 PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Default.PlayerColour\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Default.PlayerColour\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object="\"Object.Default.PlayerColour\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object=
 TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Image=
@@ -2156,8 +2176,8 @@ bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
 bShowPanelContextMenuForIncompatibleConnections=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2218,7 +2238,7 @@ GraphEditorQuickJumps=()
 
 [RootWindow]
 ScreenPosition=X=336.000 Y=0.000
-WindowSize=X=1290.000 Y=730.000
+WindowSize=X=1292.000 Y=732.000
 InitiallyMaximized=True
 
 [Directories2]
@@ -3623,8 +3643,8 @@ PerfCounters.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=D:/UE_5.6/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/5.6/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/UE_5.6/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.6/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [DetailMultiObjectNodeExpansion]
