round timer pt1

--- a/Plunder_Party 5.6 - 2/Plunder_Party.uproject
+++ b/Plunder_Party 5.6 - 2/Plunder_Party.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{60B4C22F-46AA-BC90-BED5-17B8284A2C03}",
+	"EngineAssociation": "5.6",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
