--- a/Plunder_Party/Plunder_Party.uproject
+++ b/Plunder_Party/Plunder_Party.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.6",
+	"EngineAssociation": "{00C501AD-4782-75B4-6558-6B8194B827F6}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
