--- a/Plunder_Party/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Plunder_Party/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -459,7 +459,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize2=1
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Smugglers_cove
+ContentBrowserDrawer.SelectedPaths=/Game/Smugglers_cove/scenes
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -572,10 +572,10 @@ GlobalAssetPicker.ColumnViewColumnsManuallyChangedOnce=False
 GlobalAssetPicker.ListHiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/ThirdPerson/Start_Screen
+LastLevel=/Game/Smugglers_cove/scenes/SC_demo_scene
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
