--- a/Plunder_Party 5.6 - 2/Config/DefaultEngine.ini
+++ b/Plunder_Party 5.6 - 2/Config/DefaultEngine.ini
@@ -3,15 +3,18 @@ GameName=Plunder_Party
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ThirdPerson/Start_Screen.Start_Screen
-GameDefaultMap=/Game/ThirdPerson/Start_Screen.Start_Screen
-TransitionMap=
+LocalMapOptions=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=True
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/ThirdPerson/Start_Screen.Start_Screen
+ServerDefaultMap=/Game/ThirdPerson/Start_Screen.Start_Screen
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
-ServerDefaultMap=/Game/ThirdPerson/Start_Screen.Start_Screen
-bOffsetPlayerGamepadIds=True
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
