--- a/Plunder_Party 5.6 - 2/Plunder_Party.uproject
+++ b/Plunder_Party 5.6 - 2/Plunder_Party.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.6",
+	"EngineAssociation": "{85185835-4A7D-ECBF-15BD-03AA28B434C5}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
@@ -13,6 +13,10 @@
 		},
 		{
 			"Name": "GameplayStateTree",
+			"Enabled": true
+		},
+		{
+			"Name": "Water",
 			"Enabled": true
 		}
 	]
